# Jarvis-Satellite

./: .gitmodules  README.md  install.sh  install_hook.sh  pyproject.toml  requirements.txt
jarvis_satellite/: __init__.py  __main__.py  main.py  respeaker_xvf.py
